apps/dienst2/ilb-svc.yaml
# https://cloud.google.com/kubernetes-engine/docs/how-to/internal-load-balancing#create
apiVersion: v1
kind: Service
metadata:
  name: dienst2-ilb-svc
  namespace: default
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    run: dienst2
  ports:
  - name: tcp-port
    protocol: TCP
    port: 80
    targetPort: 8000
