apps/dienst2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dienst2
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    run: dienst2
