apps/dienst2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dienst2-route
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway-infra
      name: gateway
  hostnames:
    - dienst2.ch.tudelft.nl
  rules:
    - backendRefs:
        - name: dienst2
          port: 80
