apps/dienst2/release.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dienst2-route
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway-infra
      name: gateway
  hostnames:
    - dienst2.ch.tudelft.nl
  rules:
    - backendRefs:
        - name: dienst2
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dienst2
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    run: dienst2
  type: ClusterIP
---
# POD-level network policy to protect the service from internal traffic.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dienst2-allow-internal-labels
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: dienst2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access-dienst2: "true" # Allow access from e.g. website by adding access-dienst2 to the labels.
    ports:
    - protocol: TCP
      port: 8000
  
  - from:
    # Allow all traffic that comes through the load balancer. External access is gated by IAP see GCPBackendPolicy.
    - ipBlock:
        cidr: 35.191.0.0/16
    - ipBlock:
        cidr: 130.211.0.0/22
    ports:
    - protocol: TCP
      port: 8000

  - from:
    # Allow IAP Cloud Function, which reaches dienst2 via the 'wisvch-connect' VPC and internal LB (dienst2.wisvch.internal).
    - ipBlock:
        cidr: 10.8.0.0/28
    ports:
    - protocol: TCP
      port: 8000
